Improved titles, coming soon pages for portfolio and resume

--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="de" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Jan Hohner / Home</title>
+    <title>Jan Hohner / Resume</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,12 +33,7 @@
         <div class="content">
             <div class="card card-full-height card-flex card-flex-center">
                 <div class="card-max-width-50p">
-                    <h1>Hi, I'm Jan Hohner</h1>
-                    <p>
-                        I'm a Web developer based in Fürth, Germany.<br>
-                        I'm interested in Web performance, AI, data / knowledge mining and decentralized systems.<br>
-                        I also accept freelance projects from time to time.
-                    </p>
+                    <h1>Coming soon</h1>
                 </div>
             </div>
         </div>
