--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="de" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Jan Hohner</title>
+    <title>Jan Hohner / Contact</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
