Small html validity fixes

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de" xmlns="http://www.w3.org/1999/html">
+<html lang="de">
 <head>
     <title>Jan Hohner / Contact</title>
 
@@ -17,7 +17,7 @@
                 <div class="header-logo">
                     JH
                 </div>
-                <label for="navcontrol" id="btn-navcontrol"><img src="/img/icons/bars.svg"></label>
+                <label for="navcontrol" id="btn-navcontrol"><img src="/img/icons/bars.svg" alt="toggle menu"></label>
                 <input type="checkbox" id="navcontrol" autocomplete="off">
                 <nav>
                     <ul>
