--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,26 @@
         <div class="content">
             <div class="card card-full-height card-flex card-flex-center">
                 <div class="card-max-width-50p">
-                    <h1>Coming soon</h1>
+                    <h1>Portfolio</h1>
+                    <p>These are some of the companies and institutions I've worked for:</p>
+
+                    <div class="logos">
+                        <div class="logos__element">
+                            <img src="/img/logos/fau.png">
+                        </div>
+                        <div class="logos__element">
+                            <img src="/img/logos/wi1.png">
+                        </div>
+                        <div class="logos__element">
+                            <img src="/img/logos/zollhof.svg">
+                        </div>
+                        <div class="logos__element">
+                            <img src="/img/logos/adorsys.svg">
+                        </div>
+                        <div class="logos__element">
+                            <img src="/img/logos/teambank.png">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
