Adds links and alt texts to portfolio logos

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,19 @@
 
                     <div class="logos">
                         <div class="logos__element">
-                            <img src="/img/logos/fau.png">
+                            <a href="https://www.fau.de" target="_blank"><img src="/img/logos/fau.png" alt="Logo of Friedrich-Alexander University Erlangen-Nuremberg"></a>
                         </div>
                         <div class="logos__element">
-                            <img src="/img/logos/wi1.png">
+                            <a href="http://wi1.fau.de/" target="_blank"><img src="/img/logos/wi1.png" alt="Logo of Chair of Information Systems, Innovation & Value Creation (WI1)"></a>
                         </div>
                         <div class="logos__element">
-                            <img src="/img/logos/zollhof.svg">
+                            <a href="https://www.zollhof.de/" target="_blank"><img src="/img/logos/zollhof.svg" alt="Logo of ZOLLHOF"></a>
                         </div>
                         <div class="logos__element">
-                            <img src="/img/logos/adorsys.svg">
+                            <a href="https://adorsys.de/" target="_blank"><img src="/img/logos/adorsys.svg" alt="Logo of adorsys"></a>
                         </div>
                         <div class="logos__element">
-                            <img src="/img/logos/teambank.png">
+                            <a href="https://www.teambank.de/" target="_blank"><img src="/img/logos/teambank.png" alt="Logo of Teambank"></a>
                         </div>
                     </div>
                 </div>
