--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/resume.html">Resume</a></li>
+                        <li><a href="/about-me.html">About me</a></li>
                         <li><a href="/portfolio.html">Portfolio</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
