Adds rel="noopener" to all external links

--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
                     <h1>Contact</h1>
                     <p>
                         Let's talk. My email address is <span class="decode-me">me [at] janhohner [dot] de</span>.<br>
-                        You can also find me on <a href="https://toot.cafe/@jan" target="_blank">Mastodon</a>,
-                        <a href="https://twitter.com/janhohner" target="_blank">Twitter</a> and
-                        <a href="https://github.com/janhohner" target="_blank">Github</a>.
+                        You can also find me on <a href="https://toot.cafe/@jan" target="_blank" rel="noopener">Mastodon</a>,
+                        <a href="https://twitter.com/janhohner" target="_blank" rel="noopener">Twitter</a> and
+                        <a href="https://github.com/janhohner" target="_blank" rel="noopener">Github</a>.
                     </p>
 
                     <h1>Impressum</h1>
@@ -55,9 +55,9 @@
 
         <footer>
             <div class="footer-social">
-                <a href="https://toot.cafe/@jan" target="_blank"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
-                <a href="https://twitter.com/janhohner" target="_blank"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
-                <a href="https://github.com/janhohner" target="_blank"><img src="/img/icons/github.svg" alt="Github"></a>
+                <a href="https://toot.cafe/@jan" target="_blank" rel="noopener"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
+                <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
+                <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
             <div class="footer-copyright">&copy; 2019 Jan Hohner. All rights reserved.</div>
         </footer>
