--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,19 @@
 
                     <div class="logos">
                         <div class="logos__element">
-                            <a href="https://www.fau.de" target="_blank"><img src="/img/logos/fau.png" alt="Logo of Friedrich-Alexander University Erlangen-Nuremberg"></a>
+                            <a href="https://www.fau.de" target="_blank" rel="noopener"><img src="/img/logos/fau.png" alt="Logo of Friedrich-Alexander University Erlangen-Nuremberg"></a>
                         </div>
                         <div class="logos__element">
-                            <a href="http://wi1.fau.de/" target="_blank"><img src="/img/logos/wi1.png" alt="Logo of Chair of Information Systems, Innovation & Value Creation (WI1)"></a>
+                            <a href="http://wi1.fau.de/" target="_blank" rel="noopener"><img src="/img/logos/wi1.png" alt="Logo of Chair of Information Systems, Innovation & Value Creation (WI1)"></a>
                         </div>
                         <div class="logos__element">
-                            <a href="https://www.zollhof.de/" target="_blank"><img src="/img/logos/zollhof.svg" alt="Logo of ZOLLHOF"></a>
+                            <a href="https://www.zollhof.de/" target="_blank" rel="noopener"><img src="/img/logos/zollhof.svg" alt="Logo of ZOLLHOF"></a>
                         </div>
                         <div class="logos__element">
-                            <a href="https://adorsys.de/" target="_blank"><img src="/img/logos/adorsys.svg" alt="Logo of adorsys"></a>
+                            <a href="https://adorsys.de/" target="_blank" rel="noopener"><img src="/img/logos/adorsys.svg" alt="Logo of adorsys"></a>
                         </div>
                         <div class="logos__element">
-                            <a href="https://www.teambank.de/" target="_blank"><img src="/img/logos/teambank.png" alt="Logo of Teambank"></a>
+                            <a href="https://www.teambank.de/" target="_blank" rel="noopener"><img src="/img/logos/teambank.png" alt="Logo of Teambank"></a>
                         </div>
                     </div>
                 </div>
@@ -59,9 +59,9 @@
 
         <footer>
             <div class="footer-social">
-                <a href="https://toot.cafe/@jan" target="_blank"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
-                <a href="https://twitter.com/janhohner" target="_blank"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
-                <a href="https://github.com/janhohner" target="_blank"><img src="/img/icons/github.svg" alt="Github"></a>
+                <a href="https://toot.cafe/@jan" target="_blank" rel="noopener"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
+                <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
+                <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
             <div class="footer-copyright">&copy; 2019 Jan Hohner. All rights reserved.</div>
         </footer>
