--- a/about-me.html
+++ b/about-me.html
@@ -39,13 +39,13 @@
                     </p>
                     <p>
                         Hi, my name is Jan and I'm a half German half British Web developer born in 1989 in Nuremberg, Germany.
-                        I currently work as a Senior Developer at <a href="https://adorsys.de" target="_blank">adorsys</a> where
+                        I currently work as a Senior Developer at <a href="https://adorsys.de" target="_blank" rel="noopener">adorsys</a> where
                         I build an identity and access management solution for our client
-                        <a href="https://www.teambank.de" target="_blank">Teambank</a>. In my spare time I mentor anybody who
+                        <a href="https://www.teambank.de" target="_blank" rel="noopener">Teambank</a>. In my spare time I mentor anybody who
                         wants to try their hand at programming or who wants to get better at programming &mdash; so if you're
                         interested drop me a line at  <span class="decode-me">me [at] janhohner [dot] de</span>, on
-                        <a href="https://toot.cafe/@jan" target="_blank">Mastodon</a> or on
-                        <a href="https://twitter.com/janhohner" target="_blank">Twitter</a>. I'm always happy to help, especially
+                        <a href="https://toot.cafe/@jan" target="_blank" rel="noopener">Mastodon</a> or on
+                        <a href="https://twitter.com/janhohner" target="_blank" rel="noopener">Twitter</a>. I'm always happy to help, especially
                         if you're just getting started.
                     </p>
                     <p>&nbsp;</p>
@@ -56,7 +56,7 @@
                         <div class="resume">
                             <div class="resume__item">
                                 <div class="resume__item__date">from 10/2019</div>
-                                <h4>Senior Developer - <a href="https://www.seobility.net" target="_blank">seobility</a></h4>
+                                <h4>Senior Developer - <a href="https://www.seobility.net" target="_blank" rel="noopener">seobility</a></h4>
                                 <p>
                                     In October I will start my new position as Senior Developer at seobility.
                                 </p>
@@ -66,11 +66,11 @@
                             </div>
                             <div class="resume__item">
                                 <div class="resume__item__date">09/2018 - 09/2019</div>
-                                <h4>Senior Developer - <a href="https://adorsys.de" target="_blank">adorsys</a></h4>
+                                <h4>Senior Developer - <a href="https://adorsys.de" target="_blank" rel="noopener">adorsys</a></h4>
                                 <p>
                                     Among other tasks, I developed and maintained an identity and access management software with
                                     several plugins and a custom user storage application for our client
-                                    <a href="https://www.teambank.de" target="_blank">Teambank</a>.
+                                    <a href="https://www.teambank.de" target="_blank" rel="noopener">Teambank</a>.
                                 </p>
                                 <p class="resume__item__skills">
                                     <span>Java</span><span>Springboot</span><span>Oracle</span><span>MongoDB</span><span>OpenShift</span><span>Linux</span>
@@ -78,14 +78,14 @@
                             </div>
                             <div class="resume__item">
                                 <div class="resume__item__date">12/2013 - 12/2018</div>
-                                <h4>Founder &amp; CTO - <a href="https://www.unicoach.de" target="_blank">UniCoach</a></h4>
+                                <h4>Founder &amp; CTO - <a href="https://www.unicoach.de" target="_blank" rel="noopener">UniCoach</a></h4>
                                 <p>
                                     As the technical co-founder of UniCoach I built most of the software for the startup &mdash; both
                                     the class schedule tool and the web crawler which gathered the data for the tool from 30 different
                                     German universities' websites, importing several million webpages to date. This enabled us to grow
                                     a loyal user base of more than 20.000 users. We also managed to secure big German brands such as
-                                    <a href="https://www.barmer.de" target="_blank">Barmer</a> and <a href="https://www.datev.de" target="_blank">DATEV</a>
-                                    as our customers.
+                                    <a href="https://www.barmer.de" target="_blank" rel="noopener">Barmer</a> and
+                                    <a href="https://www.datev.de" target="_blank" rel="noopener">DATEV</a> as our customers.
                                 </p>
                                 <p class="resume__item__skills">
                                     <span>PHP</span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span>Java</span><span>Linux</span>
@@ -93,16 +93,16 @@
                             </div>
                             <div class="resume__item">
                                 <div class="resume__item__date">01/2017 - 08/2018</div>
-                                <h4>Head of IT - <a href="https://www.zollhof.de" target="_blank">ZOLLHOF Tech Incubator</a></h4>
+                                <h4>Head of IT - <a href="https://www.zollhof.de" target="_blank" rel="noopener">ZOLLHOF Tech Incubator</a></h4>
                                 <p>
                                     As Head of IT at ZOLLHOF, I helped grow ZOLLHOF from day one. I built custom software and
                                     consulted with both our startups and our large pool or corporate partners, such as 
-                                    <a href="https://www.siemens.com" target="_blank">Siemens</a>,
-                                    <a href="https://www.schaeffler.de" target="_blank">Schaeffler</a>,
-                                    <a href="https://www.huk.de" target="_blank">HUK Coburg</a>,
-                                    <a href="https://www.nuernberger.de" target="_blank">NÜRNBERGER Versicherung</a>,
-                                    <a href="https://www.adidas.de" target="_blank">adidas</a> and
-                                    <a href="https://adorsys.de" target="_blank">adorsys</a> to help them achieve their goals.
+                                    <a href="https://www.siemens.com" target="_blank" rel="noopener">Siemens</a>,
+                                    <a href="https://www.schaeffler.de" target="_blank" rel="noopener">Schaeffler</a>,
+                                    <a href="https://www.huk.de" target="_blank" rel="noopener">HUK Coburg</a>,
+                                    <a href="https://www.nuernberger.de" target="_blank" rel="noopener">NÜRNBERGER Versicherung</a>,
+                                    <a href="https://www.adidas.de" target="_blank" rel="noopener">adidas</a> and
+                                    <a href="https://adorsys.de" target="_blank" rel="noopener">adorsys</a> to help them achieve their goals.
                                 </p>
                                 <p class="resume__item__skills">
                                     <span>PHP</span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span>Typescript</span><span>Vue.js</span><span>Linux</span>
@@ -112,8 +112,8 @@
                                 <div class="resume__item__date">12/2015 - 12/2016</div>
                                 <h4>
                                     Research associate -
-                                    <a href="http://wi1.fau.de" target="_blank">Chair of Information Systems, Innovation & Value Creation (WI1)</a>,
-                                    <a href="https://www.fau.de" target="_blank">Friedrich-Alexander University of Erlangen-Nuremberg</a>
+                                    <a href="http://wi1.fau.de" target="_blank" rel="noopener">Chair of Information Systems, Innovation & Value Creation (WI1)</a>,
+                                    <a href="https://www.fau.de" target="_blank" rel="noopener">Friedrich-Alexander University of Erlangen-Nuremberg</a>
                                 </h4>
                                 <p>
                                     I worked on several different projects for the Chair supporting my fellow researchers with
@@ -128,7 +128,7 @@
                                 <div class="resume__item__date">10/2011 - 12/2015</div>
                                 <h4>
                                     Student -
-                                    <a href="https://www.th-nuernberg.eu/" target="_blank">Nuremberg Tech - Technische Hochschule Nürnberg</a>
+                                    <a href="https://www.th-nuernberg.eu/" target="_blank" rel="noopener">Nuremberg Tech - Technische Hochschule Nürnberg</a>
                                 </h4>
                                 <p>
                                     I studied Information Technology and wrote my Bachelor's thesis on the topic of Web performance,
@@ -146,9 +146,9 @@
 
         <footer>
             <div class="footer-social">
-                <a href="https://toot.cafe/@jan" target="_blank"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
-                <a href="https://twitter.com/janhohner" target="_blank"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
-                <a href="https://github.com/janhohner" target="_blank"><img src="/img/icons/github.svg" alt="Github"></a>
+                <a href="https://toot.cafe/@jan" target="_blank" rel="noopener"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
+                <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
+                <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
             <div class="footer-copyright">&copy; 2019 Jan Hohner. All rights reserved.</div>
         </footer>
