--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <footer>
             <div class="footer-social">
-                <a href="https://toot.cafe/@jan" target="_blank"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
-                <a href="https://twitter.com/janhohner" target="_blank"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
-                <a href="https://github.com/janhohner" target="_blank"><img src="/img/icons/github.svg" alt="Github"></a>
+                <a href="https://toot.cafe/@jan" target="_blank" rel="noopener"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
+                <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
+                <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
             <div class="footer-copyright">&copy; 2019 Jan Hohner. All rights reserved.</div>
         </footer>
