--- a/about-me.html
+++ b/about-me.html
@@ -150,7 +150,7 @@
                 <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
                 <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
-            <div class="footer-copyright">&copy; 2019 Jan Hohner. All rights reserved.</div>
+            <div class="footer-copyright">&copy; 2019 Jan Hohner</div>
         </footer>
 
         <div class="deco-margin deco-margin-top"></div>
