--- a/about-me.html
+++ b/about-me.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Some information about myself">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
