--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="I'm a Web developer based in Fürth, Germany, interested in Web performance, AI, data / knowledge mining and decentralized systems.">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
