Adds meta theme-color and abbr tags for abbreviations

--- a/about-me.html
+++ b/about-me.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Some information about myself">
+    <meta name="theme-color" content="#1a829c">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -62,7 +63,7 @@
                                     In October I will start my new position as Senior Developer at seobility.
                                 </p>
                                 <p class="resume__item__skills">
-                                    <span>PHP</span><span>Zend Framework</span><span>Laminas</span><span>MySQL</span><span>JavaScript</span><span>Ansible</span><span>Linux</span>
+                                    <span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span><span>Zend Framework</span><span>Laminas</span><span>MySQL</span><span>JavaScript</span><span><abbr title="Cascading Style Sheets">CSS</abbr></span><span>Ansible</span><span>Linux</span>
                                 </p>
                             </div>
                             <div class="resume__item">
@@ -89,7 +90,7 @@
                                     <a href="https://www.datev.de" target="_blank" rel="noopener">DATEV</a> as our customers.
                                 </p>
                                 <p class="resume__item__skills">
-                                    <span>PHP</span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span>Java</span><span>Linux</span>
+                                    <span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span><abbr title="Cascading Style Sheets">CSS</abbr></span><span><abbr title="Sassy CSS">SCSS</abbr></span><span>Java</span><span>Linux</span>
                                 </p>
                             </div>
                             <div class="resume__item">
@@ -106,7 +107,7 @@
                                     <a href="https://adorsys.de" target="_blank" rel="noopener">adorsys</a> to help them achieve their goals.
                                 </p>
                                 <p class="resume__item__skills">
-                                    <span>PHP</span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span>Typescript</span><span>Vue.js</span><span>Linux</span>
+                                    <span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span>Typescript</span><span>Vue.js</span><span><abbr title="Cascading Style Sheets">CSS</abbr></span><span><abbr title="Sassy CSS">SCSS</abbr></span><span>Linux</span>
                                 </p>
                             </div>
                             <div class="resume__item">
@@ -122,7 +123,7 @@
                                     ZOLLHOF Tech Incubator, which I joined from day one.
                                 </p>
                                 <p class="resume__item__skills">
-                                    <span>PHP</span><span>Drupal</span><span>MySQL</span><span>JavaScript</span><span>Electron</span><span>Linux</span><span>Windows Server</span>
+                                    <span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span><span>Drupal</span><span>MySQL</span><span>JavaScript</span><span><abbr title="Cascading Style Sheets">CSS</abbr></span><span>Electron</span><span>Linux</span><span>Windows Server</span>
                                 </p>
                             </div>
                             <div class="resume__item">
@@ -136,7 +137,7 @@
                                     which won an award as one of the best theses of 2015.
                                 </p>
                                 <p class="resume__item__skills">
-                                    <span>C#</span><span>PHP</span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span>Apache Solr</span><span>Linux</span><span>Assembler</span><span>C</span>
+                                    <span>C#</span><span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span><abbr title="Cascading Style Sheets">CSS</abbr></span><span><abbr title="Sassy CSS">SCSS</abbr></span><span>Apache Solr</span><span>Linux</span><span>Assembler</span><span>C</span>
                                 </p>
                             </div>
                         </div>
