--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="I'm a Web developer based in Fürth, Germany, interested in Web performance, AI, data / knowledge mining and decentralized systems.">
+    <meta name="theme-color" content="#1a829c">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -37,7 +38,8 @@
                     <h1>Hi, I'm Jan Hohner</h1>
                     <p>
                         I'm a Web developer based in Fürth, Germany.<br>
-                        I'm interested in Web performance, AI, data / knowledge mining and decentralized systems.<br>
+                        I'm interested in Web performance, <abbr title="artificial intelligence">AI</abbr>,
+                        data / knowledge mining and decentralized systems.<br>
                         I also accept freelance projects from time to time.
                     </p>
                 </div>
