Update for about-me because of my new job at MatchManao

--- a/about-me.html
+++ b/about-me.html
@@ -41,9 +41,8 @@
                     </p>
                     <p>
                         Hi, my name is Jan and I'm a half German half British Web developer born in 1989 in Nuremberg, Germany.
-                        I currently work as a Senior Developer at <a href="https://adorsys.de" target="_blank" rel="noopener">adorsys</a> where
-                        I build an identity and access management solution for our client
-                        <a href="https://www.teambank.de" target="_blank" rel="noopener">Teambank</a>. In my spare time I mentor anybody who
+                        I currently work as a Senior Software Engineer at <a href="https://matchmanao.de" target="_blank" rel="noopener">MatchManao</a> where
+                        I am responsible for the whole software stack for our platform and the platform itself. In my spare time I mentor anybody who
                         wants to try their hand at programming or who wants to get better at programming &mdash; so if you're
                         interested drop me a line at  <span class="decode-me">me [at] janhohner [dot] de</span>, on
                         <a href="https://toot.cafe/@jan" target="_blank" rel="noopener">Mastodon</a> or on
@@ -56,6 +55,17 @@
 
                     <div class="resume-container">
                         <div class="resume">
+                            <div class="resume__item">
+                                <div class="resume__item__date">10/2019 - today</div>
+                                <h4>Senior Software Engineer - <a href="https://matchmanao.de" target="_blank" rel="noopener">MatchManao</a></h4>
+                                <p>
+                                    I'm currently building the whole MatchManao platform from scratch, implementing new features for
+                                    our new business model.
+                                </p>
+                                <p class="resume__item__skills">
+                                    <span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span><span>Laravel</span><span>MySQL</span><span>JavaScript</span><span><abbr title="Cascading Style Sheets">CSS</abbr></span><span><abbr title="Sassy CSS">SCSS</abbr></span><span>Tailwind</span>
+                                </p>
+                            </div>
                             <div class="resume__item">
                                 <div class="resume__item__date">09/2018 - 09/2019</div>
                                 <h4>Senior Developer - <a href="https://adorsys.de" target="_blank" rel="noopener">adorsys</a></h4>
