--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                 <div class="card-max-width-50p">
                     <h1>Contact</h1>
                     <p>
-                        Let's talk. My email address is <span class="decode-me">me [at] janhohner [dot] de</span>.<br>
+                        Let's talk. My email address is <span class="decode-me">jan [at] hohner [dot] dev</span>.<br>
                         You can also find me on <a href="https://toot.cafe/@jan" target="_blank" rel="noopener">Mastodon</a>,
                         <a href="https://twitter.com/janhohner" target="_blank" rel="noopener">Twitter</a> and
                         <a href="https://github.com/janhohner" target="_blank" rel="noopener">Github</a>.
@@ -49,7 +49,7 @@
                         Jan Hohner<br>
                         Hirschenstraße 11<br>
                         90762 Fürth<br>
-                        Email: <span class="decode-me">me [at] janhohner [dot] de</span>.
+                        Email: <span class="decode-me">jan [at] hohner [dot] dev</span>.
                     </p>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
                 <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
-            <div class="footer-copyright">&copy; 2019 Jan Hohner</div>
+            <div class="footer-copyright">&copy; 2020 Jan Hohner</div>
         </footer>
 
         <div class="deco-margin deco-margin-top"></div>
