Add projects page, add MatchManao logo

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/about-me.html">About me</a></li>
                         <li><a href="/portfolio.html">Portfolio</a></li>
+                        <li><a href="/projects.html">Projects</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -53,6 +54,9 @@
                         </div>
                         <div class="logos__element">
                             <a href="https://www.teambank.de/" target="_blank" rel="noopener"><img src="/img/logos/teambank.png" alt="Logo of Teambank"></a>
+                        </div>
+                        <div class="logos__element">
+                            <a href="https://www.matchmanao.de/" target="_blank" rel="noopener"><img src="/img/logos/matchmanao.svg" alt="Logo of MatchManao"></a>
                         </div>
                     </div>
                 </div>
