Add presentation page

--- a/presentations.html
+++ b/presentations.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="de">
 <head>
-    <title>Jan Hohner / Portfolio</title>
+    <title>Jan Hohner / Presentations</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,27 +37,42 @@
         <div class="content">
             <div class="card card-full-height card-flex card-flex-center">
                 <div class="card-max-width-50p">
-                    <h1>Portfolio</h1>
-                    <p>These are some of the companies and institutions I've worked for:</p>
+                    <h1>Presentations</h1>
+                    <p>These are some of the presentations I've given over the years:</p>
 
-                    <div class="logos">
-                        <div class="logos__element">
-                            <a href="https://www.fau.de" target="_blank" rel="noopener"><img src="/img/logos/fau.png" alt="Logo of Friedrich-Alexander University Erlangen-Nuremberg"></a>
+                    <div class="projects">
+                        <div class="projects__element">
+                            <div>
+                                <a href="https://f.janhohner.de/mozfest2016" target="_blank" rel="noopener"><img src="/img/presentations/mozfest2016.png" alt="MozFest 2016 presentation thumbnail"></a>
+                                <p>
+                                    <strong>
+                                        <a href="https://f.janhohner.de/mozfest2016" target="_blank" rel="noopener">Science Support &mdash; How to get outside support for your projects</a>
+                                    </strong>
+                                </p>
+                                <p>Ideas on how to combine Open Science with Open Innovation</p>
+                                <div class="projects__element__skills">
+                                    <span>Mozilla Festival 2016</span>
+                                    <span>Open Science</span>
+                                    <span>Open Innovation</span>
+                                </div>
+                            </div>
                         </div>
-                        <div class="logos__element">
-                            <a href="http://wi1.fau.de/" target="_blank" rel="noopener"><img src="/img/logos/wi1.png" alt="Logo of Chair of Information Systems, Innovation & Value Creation (WI1)"></a>
-                        </div>
-                        <div class="logos__element">
-                            <a href="https://www.zollhof.de/" target="_blank" rel="noopener"><img src="/img/logos/zollhof.svg" alt="Logo of ZOLLHOF"></a>
-                        </div>
-                        <div class="logos__element">
-                            <a href="https://adorsys.de/" target="_blank" rel="noopener"><img src="/img/logos/adorsys.svg" alt="Logo of adorsys"></a>
-                        </div>
-                        <div class="logos__element">
-                            <a href="https://www.teambank.de/" target="_blank" rel="noopener"><img src="/img/logos/teambank.png" alt="Logo of Teambank"></a>
-                        </div>
-                        <div class="logos__element">
-                            <a href="https://www.matchmanao.de/" target="_blank" rel="noopener"><img src="/img/logos/matchmanao.svg" alt="Logo of MatchManao"></a>
+
+                        <div class="projects__element">
+                            <div>
+                                <a href="https://f.janhohner.de/mozfest2017" target="_blank" rel="noopener"><img src="/img/presentations/mozfest2017.png" alt="MozFest 2017 presentation thumbnail"></a>
+                                <p>
+                                    <strong>
+                                        <a href="https://f.janhohner.de/mozfest2017" target="_blank" rel="noopener">A beginner's guide to Web performance</a>
+                                    </strong>
+                                </p>
+                                <p>A short introduction to Web performance for beginners</p>
+                                <div class="projects__element__skills">
+                                    <span>Mozilla Festival 2017</span>
+                                    <span>Web development</span>
+                                    <span>Web performance</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
