--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,7 @@
                         <li><a href="/about-me.html">About me</a></li>
                         <li><a href="/portfolio.html">Portfolio</a></li>
                         <li><a href="/projects.html">Projects</a></li>
+                        <li><a href="/presentations.html">Presentations</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                 </nav>
@@ -42,7 +43,7 @@
                     <div class="projects">
                         <div class="projects__element">
                             <div>
-                                <a href="https://divi.hohner.dev" target="_blank" rel="noopener"><img src="/img/thumbnails/divi.png" alt="DIVI ICU Register Data"></a>
+                                <a href="https://divi.hohner.dev" target="_blank" rel="noopener"><img src="/img/projects/divi.png" alt="DIVI ICU Register Data"></a>
                                 <p>
                                     <strong>
                                         <a href="https://divi.hohner.dev" target="_blank" rel="noopener">DIVI Intensivregister Daten</a>
@@ -61,7 +62,7 @@
 
                         <div class="projects__element">
                             <div>
-                                <a href="https://www.unicoach.de" target="_blank" rel="noopener"><img src="/img/thumbnails/unicoach.png" alt="UniCoach"></a>
+                                <a href="https://www.unicoach.de" target="_blank" rel="noopener"><img src="/img/projects/unicoach.png" alt="UniCoach"></a>
                                 <p>
                                     <strong>
                                         <a href="https://www.unicoach.de" target="_blank" rel="noopener">UniCoach</a>
