--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <li><a href="/about-me.html">About me</a></li>
                         <li><a href="/portfolio.html">Portfolio</a></li>
                         <li><a href="/projects.html">Projects</a></li>
+                        <li><a href="/presentations.html">Presentations</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                 </nav>
