Corrects meta description

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Some of the companies and institutions I've worked for">
+    <meta name="description" content="Some of my projects">
     <meta name="theme-color" content="#1a829c">
 
     <link rel="stylesheet" href="/css/style.css">
