Extend self description

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <h1>Hi, I'm Jan Hohner</h1>
                     <p>
                         I'm a Web developer based in Fürth, Germany.<br>
-                        I'm interested in Web performance, <abbr title="artificial intelligence">AI</abbr>,
-                        data / knowledge mining and decentralized systems.<br>
+                        I'm interested in Web development, Web performance, <abbr title="artificial intelligence">AI</abbr>,
+                        data / knowledge mining, decentralized systems, board games, gardening, cooking, bread baking and history.<br>
                         I also accept freelance projects from time to time.
                     </p>
                 </div>
