--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
                     <h1>Contact</h1>
                     <p>
                         Let's talk. My email address is <span class="decode-me">jan [at] hohner [dot] dev</span>.<br>
-                        You can also find me on <a href="https://toot.cafe/@jan" target="_blank" rel="noopener">Mastodon</a>,
-                        <a href="https://twitter.com/janhohner" target="_blank" rel="noopener">Twitter</a> and
-                        <a href="https://github.com/janhohner" target="_blank" rel="noopener">Github</a>.
+                        You can also find me on <a href="https://toot.cafe/@jan" target="_blank" rel="me noopener">Mastodon</a>,
+                        <a href="https://twitter.com/janhohner" target="_blank" rel="me noopener">Twitter</a> and
+                        <a href="https://github.com/janhohner" target="_blank" rel="me noopener">Github</a>.
                     </p>
 
                     <h1>Impressum</h1>
@@ -59,9 +59,9 @@
 
         <footer>
             <div class="footer-social">
-                <a href="https://toot.cafe/@jan" target="_blank" rel="noopener"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
-                <a href="https://twitter.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
-                <a href="https://github.com/janhohner" target="_blank" rel="noopener"><img src="/img/icons/github.svg" alt="Github"></a>
+                <a href="https://toot.cafe/@jan" target="_blank" rel="me noopener"><img src="/img/icons/mastodon.svg" alt="Mastodon"></a>&emsp;
+                <a href="https://twitter.com/janhohner" target="_blank" rel="me noopener"><img src="/img/icons/twitter.svg" alt="Twitter"></a>&emsp;
+                <a href="https://github.com/janhohner" target="_blank" rel="me noopener"><img src="/img/icons/github.svg" alt="Github"></a>
             </div>
             <div class="footer-copyright">&copy; 2020 Jan Hohner</div>
         </footer>
