Adds Royal Game of Ur to projects

--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,26 @@
                     <div class="projects">
                         <div class="projects__element">
                             <div>
+                                <a href="https://royal-ur.com" target="_blank" rel="noopener"><img src="/img/projects/royal-ur.png" alt="Royal Game of Ur"></a>
+                                <p>
+                                    <strong>
+                                        <a href="https://royal-ur.com" target="_blank" rel="noopener">Royal Game of Ur</a>
+                                    </strong>
+                                </p>
+                                <p>A 4000 year old Sumerian board game brought back to life</p>
+                                <div class="projects__element__skills">
+                                    <span><abbr title="PHP: Hypertext Preprocessor">PHP</abbr></span>
+                                    <span>Laravel</span>
+                                    <span>MySQL</span>
+                                    <span>JavaScript</span>
+                                    <span><abbr title="Cascading Style Sheets">CSS</abbr></span>
+                                    <span><abbr title="Sassy CSS">SCSS</abbr></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="projects__element">
+                            <div>
                                 <a href="https://divi.hohner.dev" target="_blank" rel="noopener"><img src="/img/projects/divi.png" alt="DIVI ICU Register Data"></a>
                                 <p>
                                     <strong>
