Change url for presentations

--- a/presentations.html
+++ b/presentations.html
@@ -43,10 +43,10 @@
                     <div class="projects">
                         <div class="projects__element">
                             <div>
-                                <a href="https://f.janhohner.de/mozfest2016" target="_blank" rel="noopener"><img src="/img/presentations/mozfest2016.png" alt="MozFest 2016 presentation thumbnail"></a>
+                                <a href="https://f.hohner.dev/mozfest2016" target="_blank" rel="noopener"><img src="/img/presentations/mozfest2016.png" alt="MozFest 2016 presentation thumbnail"></a>
                                 <p>
                                     <strong>
-                                        <a href="https://f.janhohner.de/mozfest2016" target="_blank" rel="noopener">Science Support &mdash; How to get outside support for your projects</a>
+                                        <a href="https://f.hohner.dev/mozfest2016" target="_blank" rel="noopener">Science Support &mdash; How to get outside support for your projects</a>
                                     </strong>
                                 </p>
                                 <p>Ideas on how to combine Open Science with Open Innovation</p>
@@ -60,10 +60,10 @@
 
                         <div class="projects__element">
                             <div>
-                                <a href="https://f.janhohner.de/mozfest2017" target="_blank" rel="noopener"><img src="/img/presentations/mozfest2017.png" alt="MozFest 2017 presentation thumbnail"></a>
+                                <a href="https://f.hohner.dev/mozfest2017" target="_blank" rel="noopener"><img src="/img/presentations/mozfest2017.png" alt="MozFest 2017 presentation thumbnail"></a>
                                 <p>
                                     <strong>
-                                        <a href="https://f.janhohner.de/mozfest2017" target="_blank" rel="noopener">A beginner's guide to Web performance</a>
+                                        <a href="https://f.hohner.dev/mozfest2017" target="_blank" rel="noopener">A beginner's guide to Web performance</a>
                                     </strong>
                                 </p>
                                 <p>A short introduction to Web performance for beginners</p>
