Remove link to Divi project

--- a/projects.html
+++ b/projects.html
@@ -63,10 +63,10 @@
 
                         <div class="projects__element">
                             <div>
-                                <a href="https://divi.hohner.dev" target="_blank" rel="noopener"><img src="/img/projects/divi.png" alt="DIVI ICU Register Data"></a>
+                                <a href="#" target="_blank" rel="noopener"><img src="/img/projects/divi.png" alt="DIVI ICU Register Data"></a>
                                 <p>
                                     <strong>
-                                        <a href="https://divi.hohner.dev" target="_blank" rel="noopener">DIVI Intensivregister Daten</a>
+                                        <a href="#" target="_blank" rel="noopener">DIVI Intensivregister Daten (offline for legal reasons)</a>
                                     </strong>
                                 </p>
                                 <p>Provides open data about COVID-19 in Germany</p>
